--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">OrderSystem</string>
     <string name="action_settings">Settings</string>
+    <string name="key1">Key 1</string>
+    <string name="key2">Key 1</string>
+
 </resources>
